# archon

./: .eslintrc.json  .gitignore  AGENT-GUIDE.md  AGENTS.md  CONTRIBUTING.md  Dockerfile.drawbridge  Dockerfile.filecoin  Dockerfile.filecoin-wallet  Dockerfile.gatekeeper  Dockerfile.gatekeeper-client  Dockerfile.gatekeeper-rust  Dockerfile.gatekeeper-ts  Dockerfile.herald-client  Dockerfile.hyperswarm  Dockerfile.keymaster  Dockerfile.keymaster-client  Dockerfile.keymaster-py  Dockerfile.keymaster-python  Dockerfile.lnbits  Dockerfile.react-wallet  Dockerfile.satoshi  Dockerfile.satoshi-wallet  Dockerfile.wallet  README.md  SECURITY_AUDIT.md  archon  docker-compose.btc-mainnet.yml  docker-compose.btc-signet.yml  docker-compose.btc-testnet4.yml  docker-compose.cli.yml  docker-compose.cln-mainnet.yml  docker-compose.core.yml  docker-compose.drawbridge-cln.yml  docker-compose.drawbridge.yml  docker-compose.explorer.yml  docker-compose.filecoin.yml  docker-compose.ftc-testnet5.yml  docker-compose.gatekeeper-client.yml  docker-compose.gatekeeper-rust.yml  docker-compose.gatekeeper-ts.yml  (+37 more)
.claude/: refactor.md
.github/: dependabot.yml
.github/workflows/: android-debug-build-release.yml  android-debug-build.yml  build-browser-extension.yml  build-explorer.yml  build-react-wallet-webapp.yml  dependency-review.yml  docker-build-test.yml  docker-build.yml  docker-publish.yml  e2e-test-report.yml  lockfile-consistency.yml  npm-package-publish.yml  python-keymaster-publish.yml  python-sdk-tests.yml  python-unit-tests.yml  release-publish.yml  unit-test.yml
apps/browser-extension/: package-lock.json  package.json  tsconfig.json  webpack.common.js  webpack.firefox.js
apps/chrome-extension/: package-lock.json  package.json  webpack.common.js
apps/gatekeeper-client/: index.html  package-lock.json  package.json  vite.config.js
client/: README.md  sample.env
data/: .gitignore  BTC-mainnet-mediator.json.checkpoint  BTC-signet-mediator.json.checkpoint  Signet-mediator.json.checkpoint  TBTC-mediator.json.checkpoint  TFTC-mediator.json.checkpoint
deploy/: install.sh
doc/: WHITEPAPER.md  architecture.md  deployment.md  gatekeeper-api.json  index.md  keymaster-api.json  lightning-zap-sequence.md  nginx-proxy.conf.example  operation-mining.md
docker/: Dockerfile.cli  Dockerfile.didcomm  Dockerfile.drawbridge  Dockerfile.ethereum  Dockerfile.ethereum-wallet  Dockerfile.explorer  Dockerfile.filecoin  Dockerfile.filecoin-wallet  Dockerfile.gatekeeper-client  Dockerfile.keymaster-ts  Dockerfile.lightning-mediator  Dockerfile.pinning  Dockerfile.react-wallet  Dockerfile.solana  Dockerfile.solana-wallet  Dockerfile.zcash  Dockerfile.zcash-wallet  docker-compose.btc-mainnet.yml  docker-compose.btc-signet.yml  docker-compose.btc-testnet4.yml  docker-compose.cli.yml  docker-compose.core.yml  docker-compose.drawbridge.yml  docker-compose.explorer.yml  docker-compose.gatekeeper-client.yml  docker-compose.gatekeeper-rust.yml  docker-compose.gatekeeper-ts.yml  docker-compose.hyperswarm.yml  docker-compose.keymaster-client.yml  docker-compose.keymaster-py.yml  docker-compose.keymaster-ts.yml  docker-compose.lightning.yml  docker-compose.observability.yml  docker-compose.react-wallet.yml  docker-compose.zcash-mainnet.yml
docs/: WHITEPAPER.md  clean-architecture-assessment.md  deployment.md  didcomm-design.md  digital-actor-account-infrastructure.md  email-dmail-bridge.md  first-class-id.md  gatekeeper-api.html  gatekeeper-api.json  index.md  keymaster-api.html  keymaster-api.json  lightning-wallet-design.md  lightning-zap-sequence.md  nginx-proxy.conf.example  runtime-container-architecture.md  scheme.md  sidetree-archon-comparison.md
nginx/: archon-social.conf  name-service.conf.template
patches/: lnbits-3817-internal-payment.py
python/keymaster/: PUBLISHING.md  README.md  pyproject.toml
python/keymaster/src/keymaster/: __init__.py  cli.py  core.py  crypto.py  didcomm_crypto.py  didcomm_protocols.py  gatekeeper_client.py
python/keymaster/tests/: __init__.py  conftest.py  helpers.py  test_address.py  test_asset_crypto.py  test_cli_smoke.py  test_credential.py  test_didcomm.py  test_dmail.py  test_file_image.py  test_id_alias.py  test_lightning.py  test_nostr.py  test_notice.py  test_poll.py  test_response.py  test_schema_group_challenge.py  test_utils.py  test_vault.py  test_wallet.py
python/keymaster_cli/: README.md  pyproject.toml
python/keymaster_cli/src/keymaster_cli/: cli.py
python/keymaster_sdk/: LICENSE  README.md  pyproject.toml
python/keymaster_sdk/src/keymaster_sdk/: __init__.py  keymaster_sdk.py
python/keymaster_sdk/tests/: test_keymaster_sdk.py  test_keymaster_sdk_contract_unit.py
python/keymaster_service/: README.md  pyproject.toml
python/keymaster_service/src/keymaster_service/: __init__.py  app.py  cli.py  config.py  crypto.py  gatekeeper_client.py  main.py  metrics.py  runtime.py  service.py  wallet_store.py
python/keymaster_service/tests/: test_app_partial_parity.py  test_metrics.py  test_runtime_config.py
rust/services/gatekeeper/: AUDIT_REPORT.md  COMPATIBILITY_CONTRACT.md  Cargo.toml  PORT_CHECKLIST.md  README.md
rust/services/gatekeeper/src/: api.rs  app.rs  config.rs  events.rs  lib.rs  main.rs  metrics.rs  proofs.rs  resolver.rs  search_index.rs  store.rs
rust/services/gatekeeper/tests/: event_processing.rs  http_contract.rs  json_backend.rs  mongo_backend.rs  redis_compat.rs  sqlite_backend.rs  sync_behaviors.rs
rust/services/gatekeeper/tests/common/: mod.rs
scripts/: admin-cli.js  archon-cli.js  bounty-ledger.json  bounty-payout.cjs  btc-signet-cli  btc-signet-logs  btc-testnet4-logs  did-resolution-benchmark.js  drawbridge-entrypoint.sh  gatekeeper-parity.mjs  install-keymaster.sh  ipfs-cli.js  lightning-export.js  lightning-import.js  lightning-mediator-entrypoint.sh  lnbits-entrypoint.sh  publish-registry.sh  reanchor-opid.js  rtl-entrypoint.sh  tbtc-cli  tftc-cli  tftc-logs
server/: README.md  package.json  sample.env
tests/: db-benchmark.js  hypr-confirm.js  jest-resolver.cjs  jest.setup.ts  kc_help_reference.txt  workflow.js
(+655 files in other folders)
