[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archon-keymaster"
version = "0.4.8"
description = "Reusable Python Keymaster core library for Archon"
readme = "README.md"
dependencies = [
  "httpx==0.28.1",
  "mnemonic==0.21",
  "bip-utils==2.9.3",
  "bolt11==2.2.0",
  "coincurve==21.0.0",
  "cryptography==46.0.7",
  "redis==5.2.1",
  "rfc8785==0.1.4"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["keymaster*"]
