[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archon-keymaster"
version = "0.4.8"
description = "Reusable Python Keymaster core library for Archon"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "David McFadzean", email = "davidmc@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "httpx==0.28.1",
  "mnemonic==0.21",
  "bip-utils==2.9.3",
  "bolt11==2.2.0",
  "coincurve==21.0.0",
  "cryptography==46.0.7",
  "redis==5.2.1",
  "rfc8785==0.1.4"
]

[project.scripts]
keymaster = "keymaster.cli:main"

[project.urls]
Homepage = "https://github.com/archetech/archon/"
Repository = "https://github.com/archetech/archon/"
Issues = "https://github.com/archetech/archon/issues"
Documentation = "https://github.com/archetech/archon/tree/main/python/keymaster"

[tool.setuptools.packages.find]
where = ["src"]
include = ["keymaster*"]
