[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keymaster-sdk"
version = "0.8.0"
description = "Keymaster is a client library for Archon"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name="David McFadzean", email="david@selfid.com" },
  { name="Peter Bushnell", email="peter@selfid.com" }
]
dependencies = [
  "requests==2.33.0"
]

[project.urls]
Homepage = "https://github.com/archetech/archon/"
