[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keymaster-service"
version = "0.1.0"
description = "Native Python Keymaster service for Archon"
readme = "README.md"
dependencies = [
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "httpx==0.28.1",
  "prometheus-client==0.21.1",
  "mnemonic==0.21",
  "bip-utils==2.9.3",
  "cryptography==44.0.2",
  "jcs==0.2.1"
]

[project.scripts]
keymaster-service = "keymaster_service.main:main"

[tool.setuptools.packages.find]
where = ["src"]