[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keymaster-service"
version = "0.1.0"
description = "Native Python Keymaster service for Archon"
readme = "README.md"
dependencies = [
  "archon-keymaster==0.1.0",
  "fastapi==0.115.12",
  "uvicorn[standard]==0.34.2",
  "prometheus-client==0.21.1",
  "httpx==0.28.1",
  "redis==5.2.1"
]

[project.scripts]
keymaster-service = "keymaster_service.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["keymaster_service*"]