[package]
name = "archon-rust-gatekeeper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Native Rust Gatekeeper service for Archon"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["http1", "json", "tokio", "multipart"] }
bytes = "1.8"
cid = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dotenvy = "0.15"
futures-util = "0.3"
multihash-codetable = { version = "0.1", features = ["sha2"] }
prometheus = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
